force-app/main/default/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Used in a workflow rule to populate the value in the native &quot;Type&quot; field which is not available on custom report types.</description>
        <label>Activity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Attendees__c</fullName>
        <inlineHelpText>How many people actually attended the event?</inlineHelpText>
        <label>Actual Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Event_Support__c</fullName>
        <inlineHelpText>Select the additional items you would like to have for your event.</inlineHelpText>
        <label>Additional Event Support(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AskHMSA</fullName>
                </value>
                <value>
                    <fullName>Well-being Consultant</fullName>
                </value>
                <value>
                    <fullName>Sharecare Team</fullName>
                </value>
                <value>
                    <fullName>Blue Zones Project</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_End__c</fullName>
        <label>Event End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Start__c</fullName>
        <label>Event Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Attendee_Count__c</fullName>
        <inlineHelpText>The number of people you expect to attend this Event.</inlineHelpText>
        <label>Expected Attendee Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Goal this task is meant to address</description>
        <inlineHelpText>Goal this task is meant to address</inlineHelpText>
        <label>Goal</label>
        <referenceTo>HealthCloudGA__CarePlanGoal__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Problem this task is mean to address</description>
        <inlineHelpText>Problem this task is mean to address</inlineHelpText>
        <label>Problem</label>
        <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaskType__c</fullName>
        <label>TaskType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uncategorized</fullName>
                    <default>true</default>
                    <label>Uncategorized</label>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Island__c</fullName>
        <label>Island</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Island</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_ID__c</fullName>
        <label>Load ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Memo_Description__c</fullName>
        <label>Member Memo Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Plan</label>
        <referenceTo>MemberPlan</referenceTo>
        <relationshipLabel>Member Memo</relationshipLabel>
        <relationshipName>Member_Memo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memo_Effeective_Date__c</fullName>
        <label>Memo Effeective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Memo_Termination_Date__c</fullName>
        <label>Memo Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_HPA_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd HPA Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3rd_HPA_Assignee__c</fullName>
        <label>3rd HPA Assignee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__CTIInfo__c</fullName>
        <description>Additional CTI Information</description>
        <label>CTI Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>